sdo/eclipselink.sdo.test/resource/org/eclipse/persistence/testing/sdo/helper/classgen/invalidtypename/defaultPackage/InvalidClassname.java
/*******************************************************************************
 * Copyright (c) 1998, 2007 Oracle. All rights reserved.
 * This program and the accompanying materials are made available under the
 * terms of the Eclipse Public License v1.0, which accompanies this distribution
 * and is available at http://www.eclipse.org/legal/epl-v10.html.
 *
 * Contributors:
 *     Oracle - initial API and implementation from Oracle TopLink
 ******************************************************************************/  
package defaultPackage;

public interface InvalidClassname {

   public java.util.List getEmail();

   public void setEmail(java.util.List value);

   public java.util.List getPhone();

   public void setPhone(java.util.List value);

   public java.lang.String getCustID();

   public void setCustID(java.lang.String value);


}

